--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,13 +20,39 @@
         android:theme="@style/Theme.Bluetooth"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="MainActivity"
+            android:label="@string/bluetooth_test"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name="SecondActivity"
+            android:label="@string/bluetooth_test"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="ThirdActivity"
+            android:label="@string/bluetooth_test"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="StartPairActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="BluetoothTestTab"
+            android:label="@string/bluetooth_test"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="DeviceListActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
         </activity>
     </application>
 
