--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,22 @@
             android:label="蓝牙自动化测试"
             android:exported="true">
         </activity>
+        <activity
+            android:name="TemplateVunitTestActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
+        <activity android:name=".vunit.acitivity.EnableBluetoothAutoConnectActivity"
+            android:label="开关蓝牙"
+            android:enabled="true"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
+        </activity>
+        <activity android:name=".VunitTestSettingsActivity"
+            android:label="设置"
+            android:enabled="true"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"/>
     </application>
 
 </manifest>
