--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     >
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
@@ -75,6 +76,26 @@
             android:enabled="true"
             android:screenOrientation="portrait"
             android:launchMode="singleTop"/>
+        <activity
+            android:name=".interconnect.BroadcasterActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
+         <activity
+            android:name=".interconnect.ConnectionActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
+         <activity
+            android:name=".interconnect.InterConnectActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
+         <activity
+            android:name=".interconnect.ScannerActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
