ble apk 客户端和服务端两种模式，可以互相传字符

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,16 @@
             android:label="蓝牙自动化测试"
             android:exported="true">
         </activity>
+         <activity
+            android:name=".interconnect.ServerActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
+          <activity
+            android:name=".interconnect.ClientActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
