--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,6 +106,11 @@
             android:label="蓝牙自动化测试"
             android:exported="true">
         </activity>
+          <activity
+            android:name=".nrf.NrfActivity"
+            android:label="蓝牙自动化测试"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
